FIX: Implemented frontend into registry added a OIDC login flow.
